kustomizations/media/linkstack/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkstack-valkey
  labels:
    app: linkstack-valkey
    app.kubernetes.io/name: linkstack-valkey
    app.kubernetes.io/part-of: linkstack
spec:
  replicas: 0
  selector:
    matchLabels:
      app: linkstack-valkey
      app.kubernetes.io/name: linkstack-valkey
  template:
    metadata:
      labels:
        app: linkstack-valkey
        app.kubernetes.io/name: linkstack-valkey
        app.kubernetes.io/part-of: linkstack
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:latest
        args:
          - "--save"
          - ""
          - "--appendonly"
          - "no"
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 50m
            memory: 128Mi
