kustomizations/media/linkstack/database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkstack-mysql
  namespace: media
  labels:
    app: linkstack-mysql
    app.kubernetes.io/name: linkstack-mysql
    app.kubernetes.io/part-of: linkstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkstack-mysql
      app.kubernetes.io/name: linkstack-mysql
  serviceName: linkstack-mysql
  template:
    metadata:
      labels:
        app: linkstack-mysql
        app.kubernetes.io/name: linkstack-mysql
        app.kubernetes.io/part-of: linkstack
    spec:
      containers:
      - name: mysql
        image: mysql:9
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
        livenessProbe:
          exec:
            command: [ "mysqladmin", "ping", "-h", "localhost" ]
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          exec:
            command: [ "mysqladmin", "ping", "-h", "localhost" ]
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 3
        volumeMounts:
        - name: linkstack-mysql
          mountPath: /var/lib/mysql
      nodeSelector:
        kubernetes.io/hostname: catuai
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      volumes:
      - name: linkstack-mysql
        persistentVolumeClaim:
          claimName: linkstack-mysql-pvc
