kustomizations/media/linkstack/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkstack-valkey
  labels:
    app: valkey
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: linkstack-valkey
  type: ClusterIP
