kustomizations/media/linkstack/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkstack
  labels:
    app: linkstack
spec:
  selector:
    app: linkstack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
