kustomizations/media/linkstack/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkstack
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: linkstack.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: linkstack
              port:
                number: 80
